# CS-E4780-project

./: .gitignore  README.md  justfile
consumer/: Cargo.toml
consumer/src/: breakout.rs  cli.rs  influx.rs  lib.rs  main.rs  tick.rs  window.rs
data/: README.md
docker/: Dockerfile.grafana  README.md  compose.jetstream.yml  compose.nats_core.yml  docker-compose.yml  prometheus.yml
ingester/: README.md  analyze.py  main.py  pyproject.toml  requirements.txt  trader.py
ingester/analysis/: README.md  main.py
ingester/ingester/: README.md  jetstream.py  main.py  nats_core.py  producer.py  utils.py
ingester/trader/: README.md  main.py
performance/: README.md  byExchange.json  cpu.py  jetstream-by-exchagne-profile.csv  jetstream-by-exchange-perf.json  jetstream-multi-10-profile.csv  jetstream-multi-5-perf.json  jetstream-multi-5-profile.csv  jetstream-multi-7-perf.json  jetstream-multi-7-profile.csv  jetstream-single-perf.json  jetstream-single-profile.csv  jetstream-single.csv  jetstream-singlegs.csv  latency.py  mem.py  multi-10.json  multi-3.json  multi-5.json  nat-by-exchange-perf.json  nat-byexchange-profile.csv  nat-multi-5-perf.json  nat-multi-5-profile.csv  nat-multi-7-perf.json  nat-multi-7-profile.csv  nat-single-perf.json  nat-single-profile.csv  nats-core-single.csv  plot-ingestion-rate.py  plot.py  plot_latency.py  requirements.txt  single.json
visualization/: dashboard.json
visualization/provisioning/dashboards/: dashboard.yaml
visualization/provisioning/datasources/: datasource.yaml
