[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.37.0"
bytes = "1.8.0"
futures = "0.3.31"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.38"
chrono-tz = "0.10.0"
